# folder2mp3

./: CMakeLists.txt  README.md
project/: CMakeLists.txt
project/include/: cmd_options.h  cmd_options.hpp  encoder_pool.hpp  file_list.h  file_list.hpp  lame_encoder.hpp  lame_wrapper.h  lame_wrapper.hpp  mp3_file.h  mp3_file.hpp  wav_file.h  wav_file.hpp
project/src/: cmd_options.cpp  file_list.cpp  lame_wrapper.cpp  main.cpp  mp3_file.cpp  wav_file.cpp
project/test/: CMakeLists.txt  auxiliary_tests.cpp  cmd_options_tests.cpp  cmd_options_tests.hpp  encoder_pool_tests.cpp  encoder_pool_tests.hpp  file_list_tests.cpp  file_list_tests.hpp  lame_tests.cpp  lame_wrapper_tests.cpp  lame_wrapper_tests.hpp  mp3_file_tests.cpp  mp3_file_tests.hpp  test_main.cpp  wav_file_tests.cpp  wav_file_tests.hpp
